# project-57514-58172

./: CMakeLists.txt  README.md
dataset/: out.ppm
include/: timer.h
report/: analysis.txt  template.tex
scripts/: analysis.txt  run_tests.sh
src/: dataset_generator.cpp  histogram_cuda.cpp  histogram_cuda.cu  histogram_cuda_512.cu  histogram_eq.cpp  histogram_par.cpp  histogram_par_initial.cpp  histogram_par_second.cpp  main.cpp
